# api/controllers/GetAllFinandina.go
@@ -2,21 +2,22 @@ package controllers
 
 import (
 	"SimonBK_ControlSat/domain/service"
+	"SimonBK_ControlSat/infra/db"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-// @Security ApiKeyAuth
+// @Security ApiKeyAuth2
 // @Summary Obtiene ControlSat
 // @Description Obtine ControlSat
-// @Tags Controlsat
+// @Tags Finandina
 // @Produce json
 // @Success 200 {object} swagger.GormModelStub
 // @Failure 500 {object} swagger.ErrorResponse
 // @Router /Finandina [get]
 func GetAllFinandinaController(c *gin.Context) {
-	results, err := service.GetAllFinandina()
+	results, err := service.GetAllRecords(db.DBConn)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
